Fixed vertical spacing on nested <ul>s.

--- a/css/self.css
+++ b/css/self.css
@@ -9,7 +9,7 @@ ul
 }
 
 ul ul {
-  padding-left: 2em;
+  margin-top: 0;
 }
 
 h1
